          ----------------------------------------------

This file should be used to summarize modifications introduced in the 
code and to keep track of all tags.

     ---------------------------------------------------------------
     * Please list in reverse chronological order (last date on top)
     ---------------------------------------------------------------

29 Sept 2014 Vladimir Ivanchenko (hadr-deex-V10-00-15)
----------------------------------------------------------
- G4FermiBreakUp, G4FermiFragmentsPool, G4VEvaporation, 
  G4ExcitationHandler, G4Evaporation, G4EvaporationChannel, G4GEMChannel, 
  G4UnstableFragmentBreakUp, G4VEvaporationChannel
    further reduced memory churn

27 Sept 2014 Vladimir Ivanchenko (hadr-deex-V10-00-14)
----------------------------------------------------------
- G4FermiFragmentsPool - added method IfApplicable() for fast check
    if FermiBreakUp is applicable to a given excited fragment
- G4EvaporationChannel, G4Evaporation, G4GEMChannel, G4GEMProbability,
  G4VEvaporationChannel,  G4ExcitationHandler - optimized code 
    reducing number of new/delete of intermediate objects, for that
    slightly modified interface to evaporation channel; cleanup
    logic and implementation

26 Sept 2014 Vladimir Ivanchenko (hadr-deex-V10-00-13)
----------------------------------------------------------
- G4ExcitationHandler - fixed problem in isomere production providing
    energy non-concervation on level of 1 MeV

25 Sept 2014 Vladimir Ivanchenko (hadr-deex-V10-00-12)
----------------------------------------------------------
- G4ExcitationHandler, G4Evaporation, G4PhotonEvaporation - added 
    protection against abnormal fragments 

25 Sept 2014 Vladimir Ivanchenko (hadr-deex-V10-00-11)
----------------------------------------------------------
- G4FermiFragmentsPool - is made pure static singletone, all methods
    and data const in run time, no decay of exotic states