@@ -14,6 +14,11 @@ code and to keep track of all tags.
      * Please list in reverse chronological order (last date on top)
      ---------------------------------------------------------------
 
+31 Sept 2014 Vladimir Ivanchenko (hadr-deex-V10-00-16)
+----------------------------------------------------------
+- Improved design of FermiBreakUp and fix decays of "unstable" Fermi
+    fragments
+
 29 Sept 2014 Vladimir Ivanchenko (hadr-deex-V10-00-15)
 ----------------------------------------------------------
 - G4FermiBreakUp, G4FermiFragmentsPool, G4VEvaporation, 
